修改了经典房间bug